Restrict the CD-Text charset to Latin1. Again this is not the standard. The standard only allows a subset of Ascii. But using Latin1 works with most desktop apps including K3b and I want to be able to use umlauts in CD-Text. Car-players will probably not be able to display them so maybe a warning message would be a good idea.

BUG: 82252

svn path=/trunk/extragear/multimedia/k3b/; revision=607144